tried to fix contrast

--- a/css/ui.css
+++ b/css/ui.css
@@ -31,7 +31,10 @@ a {
 
 .nav-link {
   font-weight: 500;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  color: #fef3d3;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 a.active {
